# barrett_hand_robot

barrett_hand_defs/: CMakeLists.txt  package.xml  package.xml~
barrett_hand_defs/defs/: barret_hand.urdf.xacro  barret_hand.urdf.xacro~  barret_hand_export.urdf.xacro  materials.xml
barrett_hand_defs/launch/: upload_robot.launch  upload_robot_floating.launch  upload_robot_optoforce.launch
barrett_hand_defs/meshes/: KnuckleThreeOptoforceBaseLink.dae  KnuckleThreeOptoforceLink.dae  optoforce_sphere.stl  secondFingerLink.stl  thirdFingerLink.stl  thirdFingerOptoforceBaseLink.stl  thirdFingerOptoforceLink.stl
barrett_hand_defs/robots/: barrett_hand.srdf  barrett_hand.urdf.xml  barrett_hand_floating.urdf.xml
